sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:14: error: reassignment to val
        getNombreValeurs=getNombreValeurs-1
                        ^